--- a/Projetos.html
+++ b/Projetos.html
@@ -3,51 +3,73 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
+        background-color: #d3b67f; /* Cor de fundo vibrante (laranja) */
+        padding: 20px; /* Adiciona um espaçamento interno para separar os projetos do fundo */
     }
 
     .project {
-        width: calc(33.33% - 20px); /* 33.33% para dividir igualmente em três colunas */
+        width: calc(33.33% - 20px);
         margin-bottom: 50px;
         text-align: center;
     }
 
     .project img {
-        width: 100%; /* Definindo a largura da imagem como 100% */
-        height: 200px; /* Definindo a altura da imagem como 200 pixels */
-        object-fit: cover; /* Para garantir que a imagem cubra a área designada */
+        width: 100%;
+        height: 200px;
+        object-fit: cover;
+        border: 2px solid #047474; /* Cor da borda branca para contraste */
     }
 
     .project h3 {
-        margin-bottom: 2px; /* Adicionando uma margem inferior ao cabeçalho */
+        margin-bottom: 2px;
     }
 </style>
 
 <div class="project-container">
-    <!-- Projeto 1 -->
+    <!-- Projeto 1: Lista de tarefas -->
     <div class="project">
-        <img src="./img/Projeto1.jpeg" alt="Projeto 1">
+        <img src="./img/Projeto1.jpeg" alt="Projeto 1 - Lista de Tarefas">
         <h3>Lista de tarefas</h3>
         <a href="https://benevolent-sunburst-1f22e6.netlify.app/" target="_blank" rel="noopener noreferrer">
             <p>Projeto 1.</p> 
         </a>
     </div>
 
-    <!-- Projeto 2 -->
+    <!-- Projeto 2: Landing Page -->
     <div class="project">
-        <img src="./img/Projeto2.jpeg" alt="Projeto 2">
+        <img src="./img/Projeto2.jpeg" alt="Projeto 2 - Landing Page">
         <h3>Landing Page</h3>
         <a href="https://unrivaled-crumble-c08cdf.netlify.app/" target="_blank" rel="noopener noreferrer">
             <p>Projeto 2.</p> 
         </a>
     </div>
 
-    <!-- Projeto 3 -->
+    <!-- Projeto 3: Perfil -->
     <div class="project">
-        <img src="./img/Projeto3.jpeg" alt="Projeto 3">
+        <img src="./img/Projeto3.jpeg" alt="Projeto 3 - Perfil">
         <h3>Perfil</h3>
         <a href="https://genuine-lebkuchen-0b2a0b.netlify.app" target="_blank" rel="noopener noreferrer">
             <p>Projeto 3.</p> 
         </a>
     </div>
+    
+    <!-- Projeto 4: Verificar E-mail -->
+    <div class="project">
+        <img src="./img/Formularioemail.jpeg" alt="Projeto 4 - Verificar E-mail">
+        <h3>Verificar e-mail</h3>
+        <a href="https://stellular-figolla-11ac40.netlify.app" target="_blank" rel="noopener noreferrer">
+            <p>Projeto 4.</p> 
+        </a>
+    </div>
+    
+    <!-- Projeto 5: Previsão do Tempo -->
+    <div class="project">
+        <img src="./img/APItempo.jpeg" alt="Projeto 5 - Previsão do Tempo">
+        <h3>Previsão do tempo</h3>
+        <a href="https://exquisite-salamander-4397a0.netlify.app" target="_blank" rel="noopener noreferrer">
+            <p>Projeto 5.</p> 
+        </a>
+    </div>
 </div>
-<a href="#" class="back-to-top">Voltar ao Inicio</a>
+
+<a href="#" class="back-to-top">Voltar ao Início</a>
