--- a/Projetos.html
+++ b/Projetos.html
@@ -1,29 +1,59 @@
-<style>
-    .project-container {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        background-color: #d3b67f; /* Cor de fundo vibrante (laranja) */
-        padding: 20px; /* Adiciona um espaçamento interno para separar os projetos do fundo */
-    }
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projetos</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
 
-    .project {
-        width: calc(33.33% - 20px);
-        margin-bottom: 50px;
-        text-align: center;
-    }
+        .project-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            align-items: flex-start; /* Alinha os itens no início do contêiner */
+            background-color: #d3b67f; /* Cor de fundo vibrante (laranja) */
+            padding: 20px; /* Adiciona um espaçamento interno para separar os projetos do fundo */
+        }
 
-    .project img {
-        width: 100%;
-        height: 200px;
-        object-fit: cover;
-        border: 2px solid #047474; /* Cor da borda branca para contraste */
-    }
+        .project {
+            width: calc(33.33% - 20px);
+            margin-bottom: 50px;
+            text-align: center;
+        }
 
-    .project h3 {
-        margin-bottom: 2px;
-    }
-</style>
+        .project img {
+            width: 100%;
+            height: 200px;
+            object-fit: cover;
+            border: 2px solid #047474; /* Cor da borda branca para contraste */
+        }
+
+        .project h3 {
+            margin-bottom: 2px;
+        }
+
+        .back-to-top {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            padding: 10px 20px;
+            background-color: #047474;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+        }
+
+        .back-to-top:hover {
+            background-color: #024141;
+        }
+    </style>
+</head>
+<body>
 
 <div class="project-container">
     <!-- Projeto 1: Lista de tarefas -->
@@ -31,7 +61,7 @@
         <img src="./img/Projeto1.jpeg" alt="Projeto 1 - Lista de Tarefas">
         <h3>Lista de tarefas</h3>
         <a href="https://benevolent-sunburst-1f22e6.netlify.app/" target="_blank" rel="noopener noreferrer">
-            <p>Projeto 1.</p> 
+            <p>Projeto 1</p> 
         </a>
     </div>
 
@@ -40,7 +70,7 @@
         <img src="./img/Projeto2.jpeg" alt="Projeto 2 - Landing Page">
         <h3>Landing Page</h3>
         <a href="https://unrivaled-crumble-c08cdf.netlify.app/" target="_blank" rel="noopener noreferrer">
-            <p>Projeto 2.</p> 
+            <p>Projeto 2</p> 
         </a>
     </div>
 
@@ -49,7 +79,7 @@
         <img src="./img/Projeto3.jpeg" alt="Projeto 3 - Perfil">
         <h3>Perfil</h3>
         <a href="https://genuine-lebkuchen-0b2a0b.netlify.app" target="_blank" rel="noopener noreferrer">
-            <p>Projeto 3.</p> 
+            <p>Projeto 3</p> 
         </a>
     </div>
     
@@ -58,7 +88,7 @@
         <img src="./img/Formularioemail.jpeg" alt="Projeto 4 - Verificar E-mail">
         <h3>Verificar e-mail</h3>
         <a href="https://stellular-figolla-11ac40.netlify.app" target="_blank" rel="noopener noreferrer">
-            <p>Projeto 4.</p> 
+            <p>Projeto 4</p> 
         </a>
     </div>
     
@@ -67,9 +97,21 @@
         <img src="./img/APItempo.jpeg" alt="Projeto 5 - Previsão do Tempo">
         <h3>Previsão do tempo</h3>
         <a href="https://exquisite-salamander-4397a0.netlify.app" target="_blank" rel="noopener noreferrer">
-            <p>Projeto 5.</p> 
+            <p>Projeto 5</p> 
+        </a>
+    </div>
+
+    <!-- Projeto 6: Calculadora -->
+    <div class="project">
+        <img src="./img/calculadora.jpeg" alt="Projeto 6 - Calculadora">
+        <h3>Calculadora</h3>
+        <a href="https://calculadoradojoao.netlify.app" target="_blank" rel="noopener noreferrer">
+            <p>Projeto 6</p> 
         </a>
     </div>
 </div>
 
-<a href="#" class="back-to-top">Voltar ao Início</a>
+<a href="#" class="back-to-top">Voltar ao Início</a> 
+
+</body>
+</html>
